--- a/milene/stile.css
+++ b/milene/stile.css
@@ -13,4 +13,11 @@ color: var(--branco-principal);
 *{
    margin:0;
    padding:0;
+
 }
+
+.principal{
+background-image:url(img/Background\ \(1\).png) ;
+background-repeat: no-repeat;
+}backgroud-size: cantain;
+aling-items:center;
