--- a/milene/stile.css
+++ b/milene/stile.css
@@ -3,18 +3,19 @@
     --cinza-secundario:#C0C0C0;
     --botao-azul:#167BF7;
     --cor-de-fundo:#00030C;
+    --fonte-principal:'inter'
 } 
-
 body{
 background-color: var();
 color: var(--branco-principal);
+font-family: var(fonte-principal);
 
 }
-
 {
 margin:0;
 padding:0;
 }
+
 .principal{
 background-image:url(img/Background\ \(1\).png) ;
 background-repeat: no-repeat;
